# 2DGameSDK

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  _animated_dynamic_entity_8h.html  _animated_dynamic_entity_8h_source.html  _animated_kinematic_entity_8h_source.html  _animated_render_strategy_8h.html  _animated_static_entity_8h.html  _animated_static_entity_8h_source.html  _animated_transformable_entity_8h.html  _animated_transformable_entity_8h_source.html  _asset_manager_8h.html  _asset_manager_8h_source.html  _audio_controller_8h.html  _audio_controller_8h_source.html  _bounded_follow_camera_controller_8h.html  _bounded_follow_camera_controller_8h_source.html  _camera_controller_8h_source.html  _circle_shape_8h.html  _circle_shape_8h_source.html  _collision_event_type_8h_source.html  _collision_type_8h.js  _common_8h.html  _common_8h_source.html  _constants_8h.js  _constants_8h_source.html  _core_8h.html  _core_8h_source.html  _default_camera_controller_8h_source.html  _dynamic_entity_8h.html  _dynamic_shape_physics_8h_source.html  _effect_8h.html  _effect_8h_source.html  _empty_event_data_8h.html  _empty_event_data_8h.js  _entity_8h.html  (+328 more)
Project_2DGameSDK/: CMakeLists.txt  Makefile  mainpage.h
Project_2DGameSDK/include/2DGameSDK/: Common.h  Core.h  Event.h  GameObject.h  Physics.h  ResourceCache.h  Scene.h  World.h
Project_2DGameSDK/include/2DGameSDK/common/: Constants.h  Converters.h  GraphicTools.h  Helpers.h
Project_2DGameSDK/include/2DGameSDK/common/graphics/: GraphicTools.h  PointConverter.h  PoseConverter.h
Project_2DGameSDK/include/2DGameSDK/common/types/: ObjectType.h
Project_2DGameSDK/include/2DGameSDK/core/: Game.h  GameObject.h  GameOptions.h  GameState.h  ResourceCache.h  VisualObject.h
Project_2DGameSDK/include/2DGameSDK/core/asset/: AssetManager.h  ResourceCache.h  SoundBufferCache.h  TextureCache.h
Project_2DGameSDK/include/2DGameSDK/core/audio/: AudioController.h
Project_2DGameSDK/include/2DGameSDK/core/camera/: BoundedFollowCameraController.h  CameraController.h  DefaultCameraController.h
Project_2DGameSDK/include/2DGameSDK/core/effect/: Effect.h
Project_2DGameSDK/include/2DGameSDK/core/overlay/: OverlayDisplay.h
Project_2DGameSDK/include/2DGameSDK/core/projectile/: Projectile.h
Project_2DGameSDK/include/2DGameSDK/core/state/: GameState.h  StateManager.h
Project_2DGameSDK/include/2DGameSDK/core/visual/: AnimatedRenderStrategy.h  SequencedRenderStrategy.h  SimpleSequenceRenderStrategy.h  SingleSpriteRenderStrategy.h
Project_2DGameSDK/include/2DGameSDK/dll/: gamesdk_dll.h
Project_2DGameSDK/include/2DGameSDK/dll/logger/: gamesdk_logger.h
Project_2DGameSDK/include/2DGameSDK/event/: EventController.h
Project_2DGameSDK/include/2DGameSDK/event/data/: EmptyEventData.h  GenericEventData.h
Project_2DGameSDK/include/2DGameSDK/event/observable/: Observable.h  ObservableBase.h  ObservableCounter.h  (+1 more)
Project_2DGameSDK/include/2DGameSDK/physics/: CollisionEventType.h  CollisionTarget.h  CollisionType.h
Project_2DGameSDK/include/2DGameSDK/scene/: EntityFactory.h  SceneGraph.h  SceneGraphNode.h
Project_2DGameSDK/include/2DGameSDK/world/: GameWorld.h  GameWorldFactory.h
Project_2DGameSDK/src/common/: Converters.cpp  GraphicTools.cpp
Project_2DGameSDK/src/common/graphics/: GraphicTools.cpp  PointConverter.cpp  PoseConverter.cpp
Project_2DGameSDK/src/core/: Game.cpp  GameObject.cpp
Project_2DGameSDK/src/core/asset/: AssetManager.cpp  SoundBufferCache.cpp  TextureCache.cpp
Project_2DGameSDK/src/core/audio/: AudioController.cpp
Project_2DGameSDK/src/core/camera/: BoundedFollowCameraController.cpp  CameraController.cpp  DefaultCameraController.cpp
Project_2DGameSDK/src/core/effect/: Effect.cpp
Project_2DGameSDK/src/core/overlay/: OverlayDisplay.cpp
Project_2DGameSDK/src/core/projectile/: Projectile.cpp  SequencedProjectile.cpp  SpriteProjectile.cpp
Project_2DGameSDK/src/core/state/: StateManager.cpp
Project_2DGameSDK/src/core/visual/: AnimatedRenderStrategy.cpp  ExtendedSequenceRenderStrategy.cpp  InvisibleRenderStrategy.cpp  RenderStrategy.cpp  SequencedRenderStrategy.cpp  SimpleSequenceRenderStrategy.cpp  SingleSpriteRenderStrategy.cpp
Project_2DGameSDK/src/event/: EventController.cpp
Project_2DGameSDK/src/event/observable/: ObservableCounter.cpp  OnKeyPress.cpp
Project_2DGameSDK/src/physics/: CollisionTarget.cpp
Project_2DGameSDK/src/physics/shape/: RectangleShape.cpp  Shape.cpp  ShapeFactory.cpp
Project_2DGameSDK/src/scene/: SceneGraph.cpp  SceneGraphNode.cpp
Project_2DGameSDK/src/scene/entity/: AnimatedKinematicEntity.cpp  AnimatedTransformableEntity.cpp  Entity.cpp  SpriteTransformableEntity.cpp  TransformableEntity.cpp
Project_2DGameSDK/src/shared/: Game.h  GameOptions.h
Project_2DGameSDK/src/shared/event/: Event.h
Project_2DGameSDK/src/templates/: ResourceCache.cpp
Project_2DGameSDK/src/world/: GameWorld.cpp  GameWorldFactory.cpp
Project_2DGameSDK/src/world/tilemap/: Tile.cpp  TileLayer.cpp
Project_Prototype/: CMakeLists.txt  Makefile
Project_Prototype/include/: examples.h
Project_Prototype/res/audio/Fantasy_Musica/: README.md
Project_Prototype/res/audio/Juhani_Junkala/: License.md  License.txt
Project_Prototype/res/audio/Matthew_Pablo/: README.md
Project_Prototype/res/audio/Trevor_Lentz/: README.md
Project_Prototype/res/audio/tgfcoder/: FrozenJam.oga  License.md
Project_Prototype/res/maps/empty/: tilemap.json
Project_Prototype/res/maps/mage_city/: README.md  materialmap.json  tilemap.json
Project_Prototype/res/maps/proto1/: tilemap.json
Project_Prototype/res/maps/simple_grass/: tilemap.json
Project_Prototype/res/maps/testmap/: tilemap.json
Project_Prototype/res/physicstest/: materialmap.json  tilemap.json
Project_Prototype/res/testmap/: tilemap.json
Project_Prototype/res/textures/rpghero/: README.md
Project_Prototype/src/: main.cpp
Project_Prototype/src/examples/: box2d_demo.cpp  chipmunk_demo.cpp  chopper_demo.cpp  minimal_demo.cpp  physics_demo.cpp  player_demo.cpp  player_demo_gta2.cpp  prototype1.cpp  prototype2.cpp
(+706 files in other folders)
